name:                advent
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/advent#readme
license:             BSD3
license-file:        LICENSE
author:              Example Author Name
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable advent01-exe
  hs-source-dirs:      app
  main-is:             Advent01.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable advent02-exe
  hs-source-dirs:      app
  main-is:             Advent02.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parsec
  default-language:    Haskell2010

executable advent03-exe
  hs-source-dirs:      app
  main-is:             Advent03.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable advent04-exe
  hs-source-dirs:      app
  main-is:             Advent04.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pureMD5
                     , bytestring
  default-language:    Haskell2010

executable advent05-exe
  hs-source-dirs:      app
  main-is:             Advent05.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable advent06-exe
  hs-source-dirs:      app
  main-is:             Advent06.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parsec
                     , containers
  default-language:    Haskell2010

executable advent07-exe
  hs-source-dirs:      app
  main-is:             Advent07.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , parsec
                     , containers
                     , uglymemo
  default-language:    Haskell2010

executable advent08-exe
  hs-source-dirs:      app
  main-is:             Advent08.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable advent09-exe
  hs-source-dirs:      app
  main-is:             Advent09.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parsec
                     , containers
  default-language:    Haskell2010

executable advent10-exe
  hs-source-dirs:      app
  main-is:             Advent10.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable advent11-exe
  hs-source-dirs:      app
  main-is:             Advent11.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable advent12-exe
  hs-source-dirs:      app
  main-is:             Advent12.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , bytestring
                     , scientific
                     , unordered-containers
                     , vector
  default-language:    Haskell2010

executable advent13-exe
  hs-source-dirs:      app
  main-is:             Advent13.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parsec
  default-language:    Haskell2010

executable advent14-exe
  hs-source-dirs:      app
  main-is:             Advent14.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , regex-posix
  default-language:    Haskell2010

test-suite advent-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , advent
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/advent
